--- a/dashboard/member.html
+++ b/dashboard/member.html
@@ -626,7 +626,7 @@
         <!-- start section footer -->
         <div class="footer">
             <div class="copyright">
-                <p class="mb-0">Copyright © Designed &amp; Developed by <a href="uxign.com" target="_blank">Uxign</a> 2021
+                <p class="mb-0"><a href="" target="_blank"></a> 
                 </p>
             </div>
         </div>
